  * Added #table_elements to ElementLocators
  * Added #cell_elements to ElementLocators
  * Added #image_elements to ElementLocators
  * Added #form_elements to ElementLocators
  * Added #list_item_elements to ElementLocators
  * Added #unordered_list_elements to ElementLocators
  * Added #ordered_list_elements to ElementLocators
  * Added #h1_elements to ElementLocators
  * Added #navigate_to to PageFactory to navigate to a page through previous pages
  * Added #continue_navigation_to to PageFactory which begins at @current_page
  * Added routes to PageFactory to collect routes through the site
  * Updated to use selenium-webdriver 2.16.0

=== Version 0.5.5 / 2011-12-27
* Enhancements
  * Added ability to find Checkbox by :value
  * Added ability to find HiddenField by :value
  * Added ability to find a parent of an Element
  * Added #fire_event method to Element
  * Added #focus method to Element
* Fixes
  * Updated #populate_page_with to no longer attempt to set a value in a field that is disabled

=== Version 0.5.4 / 2011-12-18
* Enhancements
  * Added deprecation warning to the method_missing method on Element.  This ability will be removed in 0.6
  * Added full support for file_field element
  * Added ability to find TextField by :title
  * Added ability to find Form by :action
  * Added ability to find Image by :alt
  * Added ability to find Image by :src

=== Version 0.5.3 / 2011-12-11
* Enhancements
  * Added new module PagePopulator with single method populate_page_with
  * Updated to use selenium-webdriver 2.15.0
  * Updated to use watir-webdriver 0.4.1
* Fixes
  * Updated prompt method to make it compatible with latest dependencies

=== Version 0.5.2 / 2011-11-30
* Enhancements
  * Added ability to find image buttons by src
  * Added ability to find image button by alt
  * Added first_row and last_row methods to Table
  * Updated to use selenium-webdriver 2.14.0
  * Updated to use watir-webdriver 0.3.9

=== Version 0.5.1 / 2011-11-18
* Enhancements