@@ -599,6 +599,21 @@ module PageObject
     end
 
     #
+    # Finds all h2 elements matching the identifier
+    #
+    # @param [Hash] identifier how we find a H2.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    #
+    def h2_elements(identifier)
+      platform.h2s_for(identifier.clone)
+    end
+
+    #
     # Finds a h3
     #
     # @param [Hash] identifier how we find a H3.  You can use a multiple paramaters
