@@ -654,6 +654,13 @@ module PageObject
         end
 
         #
+        # platform method to retrieve all h2 elements
+        #
+        def h2s_for(identifier)
+          find_selenium_elements(identifier, Elements::Heading, 'h2')
+        end
+
+        #
         # platform method to retrieve the text from a h3
         # See PageObject::Accessors#h3
         #
